Fixed alignment of footer

--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ a:active {
 #footer div.spacer {
     float: left;
     width: 67px;
-    height: 1px;
+    height: 16px;
 }
 
 #footer div.icons img {
